--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,10 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+
+        <script src="js/jquery.min.js"></script>
+        <script src="js/popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
