--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" href="css/boostrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        {% include "includes/navbar.html.twig" %}
         {% block body %}{% endblock %}
 
         <script src="js/jquery.min.js"></script>
