--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>SymfoBNB - {% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         {% block stylesheets %}{% endblock %}
     </head>
