--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -1,20 +1,111 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Acceuil !
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<div class="container">
+	<div class="jumbotron mt-5">
+		<h1 class="display-3">Bienvenue sur SymfoBNB !</h1>
+		<p class="lead">Nous mettons en relation les propriétaires et les voyageurs qui recherchent a se loger pour leurs séjour à l'étranger.</p>
+		<hr class="my-4">
+		<p>Vous êtes un voyageurs, et vous chercher votre prochain coin de paradis ?</p>
+		<p class="lead">
+			<a class="btn btn-primary btn-lg" href="#" role="button">Voir nos annonces !</a>
+		</p>
+	</div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h2 class="h1 mt-3 mb-4">Nos appartements stars</h2>
+    <div class="row"> 
+        <div class="col-md-4">
+            <div class="card bg-light mb-3">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Applications/MAMP/htdocs/symfony/airbnb_symfony/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Applications/MAMP/htdocs/symfony/airbnb_symfony/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
+                <div class="card-header text-center">
+                    3 Chambres, <strong>44€/nuit</strong> <br>
+                    <small>Pas encore noté</small>
+                </div>
+
+                <img src="http://placehold.it/1000x400" alt="PhotoDuLogement" style="height: 200px; width: 100%; display: block">
+
+                <div class="card-body">
+                    <h4 class="card-title">Appartement de rêve</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos sint iusto suscipit eveniet blanditiis incidunt excepturi beatae nihil esse odio.</p>
+                    <a href="#" class="btn btn-secondary"> en savoir plus !</a>
+                </div>
+
+            </div>
+        </div>
+
+                <div class="col-md-4">
+            <div class="card bg-light mb-3">
+
+                <div class="card-header text-center">
+                    3 Chambres, <strong>44€/nuit</strong> <br>
+                    <small>Pas encore noté</small>
+                </div>
+
+                <img src="http://placehold.it/1000x400" alt="PhotoDuLogement" style="height: 200px; width: 100%; display: block">
+
+                <div class="card-body">
+                    <h4 class="card-title">Appartement de rêve</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos sint iusto suscipit eveniet blanditiis incidunt excepturi beatae nihil esse odio.</p>
+                    <a href="#" class="btn btn-secondary"> en savoir plus !</a>
+                </div>
+
+            </div>
+        </div>
+
+
+        <div class="col-md-4">
+            <div class="card bg-light mb-3">
+
+                <div class="card-header text-center">
+                    3 Chambres, <strong>44€/nuit</strong> <br>
+                    <small>Pas encore noté</small>
+                </div>
+
+                <img src="http://placehold.it/1000x400" alt="PhotoDuLogement" style="height: 200px; width: 100%; display: block">
+
+                <div class="card-body">
+                    <h4 class="card-title">Appartement de rêve</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos sint iusto suscipit eveniet blanditiis incidunt excepturi beatae nihil esse odio.</p>
+                    <a href="#" class="btn btn-secondary"> en savoir plus !</a>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+
+    <h2 class="h1 mt-3 mb-4">Nos hôtes stars</h2>
+    <div class="row">
+        <div class="col">
+            <div class="card border-secondary mb-3">
+                <div class="card-body">
+                    <h4 class="card-title">Benjamin GIRARD</h4>
+                    <hr>
+                    <div class="card-text">
+                        <img src="http://placehold.it/64x64" class="float-left mr-3" alt="mon avatar">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos sint.</p>
+                        <a href="#" class="btn btn-success float-right"> en savoir plus !</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card border-secondary mb-3">
+                <div class="card-body">
+                    <h4 class="card-title">Benjamin GIRARD</h4>
+                    <hr>
+                    <div class="card-text">
+                        <img src="http://placehold.it/64x64" class="float-left mr-3" alt="mon avatar">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos sint.</p>
+                        <a href="#" class="btn btn-success float-right"> en savoir plus !</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 {% endblock %}
