forget the '/' before url of src (css and js)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,16 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>SymfoBNB - {% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
         {% include "includes/navbar.html.twig" %}
         {% block body %}{% endblock %}
 
-        <script src="js/jquery.min.js"></script>
-        <script src="js/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="/js/jquery.min.js"></script>
+        <script src="/js/popper.min.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
