--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>SymfoBNB - {% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/app.css">
+        
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
