--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,3 +12,7 @@ div.ad-titre h1, div.ad-titre p {
     color: white;
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
 }
+
+div.carousel-caption{
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
+}
