--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -6,8 +6,11 @@
 
 	<div class="collapse navbar-collapse" id="navbarColor01">
 		<ul class="navbar-nav mr-auto">
-			<li class="nav-item active">
+			<li class="nav-item">
 				<a class="nav-link" href="{{path('homePage')}}">Acceuil</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="{{path('ads_index ')}}">Annonces</a>
 			</li>
 		</ul>
         <ul class="navbar-nav ml-auto">
