add an other link

--- a/templates/ad/index.html.twig
+++ b/templates/ad/index.html.twig
@@ -12,16 +12,23 @@
 					<div class="card bg-light mb-3">
 
 						<div class="card-header text-center">
-							{{ad.rooms}} Chambres,
+							{{ad.rooms}}
+							Chambres,
 							<strong>{{ad.price}}€/nuit</strong>
 							<br>
 							<small>Pas encore noté</small>
 						</div>
 
-						<img src="{{ ad.coverImage }}" alt="PhotoDuLogement" style="height: 200px; width: 100%; display: block">
+						<a href="{{ path('ads_show', { 'slug': ad.slug }) }}">
+							<img src="{{ ad.coverImage }}" alt="PhotoDuLogement" style="height: 200px; width: 100%; display: block">
+						</a>
 
 						<div class="card-body">
-							<h4 class="card-title">{{ad.title}}</h4>
+							<h4 class="card-title">
+								<a href="{{ path('ads_show', { 'slug': ad.slug }) }}" class="text-dark text-decoration-none">
+									{{ad.title}}
+								</a>
+							</h4>
 							<p>{{ad.introduction}}</p>
 							<a href="{{ path('ads_show', { 'slug': ad.slug }) }}" class="btn btn-secondary">
 								en savoir plus !</a>
