Create flash.html.twig for adFlash message, and include this in base.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,9 @@
 
 <body>
 
+
     {% include "includes/navbar.html.twig" %}
+    {% include "includes/flash.html.twig" %}
 
     {% block body %}{% endblock %}
 
