--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,8 @@
 
     {% block body %}{% endblock %}
 
+    {% include "includes/footer.html.twig" %}
+
     <script src="/js/jquery.min.js"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
