--- a/templates/ad/new.html.twig
+++ b/templates/ad/new.html.twig
@@ -5,6 +5,7 @@
 
 {% block body %}
 
+{% form_theme form _self %}
 <div class="container">
     <h1> Créez votre annonce </h1>
 
@@ -20,3 +21,46 @@
 </div>
 
 {% endblock %}
+
+{# Redefine template for imageType #}
+{% block _ad_images_widget  %}
+    
+    <p> Ajoutez vos images : </p>
+    {{ form_widget(form) }}
+
+    <div class="form-group">
+        <button type="button" id="add-image" class="btn btn-primary">Ajoutez une image</button>
+    </div>
+{% endblock _ad_images_widget %}
+
+{# Redefine template for form_row #}
+{% block _ad_images_entry_row %}
+    {{form_widget(form)}}
+{% endblock _ad_images_entry_row %}
+
+{# Redefine template for form_widget #}
+{% block _ad_images_entry_widget %}
+     <div class="form-group">
+         <div class="row">
+             <div class="col">{{form_widget(form.url)}}</div>
+             <div class="col">{{form_widget(form.caption)}}</div>
+         </div>
+     </div>
+{% endblock _ad_images_entry_widget %}
+
+{% block javascripts %}
+     <script>
+         $('#add-image').click(function(){
+             
+             //Je récupère le nombre de champ deja existant
+             const index = $('#ad_images div.form-group').length; 
+             
+             //recuperer le prototype des entrées
+             const tmpl = $('#ad_images').data('prototype').replace(/__name__/g, index);
+
+            //Injecter le code dans la div
+            $('#ad_images').append(tmpl);
+
+         })
+     </script>
+{% endblock javascripts %}
