template for imageType and button for add new input

--- a/templates/ad/new.html.twig
+++ b/templates/ad/new.html.twig
@@ -17,50 +17,57 @@
 
     {{ form_end(form) }}
 
-    
+
 </div>
 
 {% endblock %}
 
 {# Redefine template for imageType #}
 {% block _ad_images_widget  %}
-    
-    <p> Ajoutez vos images : </p>
-    {{ form_widget(form) }}
 
-    <div class="form-group">
-        <button type="button" id="add-image" class="btn btn-primary">Ajoutez une image</button>
-    </div>
+<p> Ajoutez vos images : </p>
+{{ form_widget(form) }}
+
+<div class="form-group">
+    <button type="button" id="add-image" class="btn btn-primary">Ajoutez une image</button>
+</div>
 {% endblock _ad_images_widget %}
 
 {# Redefine template for form_row #}
 {% block _ad_images_entry_row %}
-    {{form_widget(form)}}
+{{form_widget(form)}}
 {% endblock _ad_images_entry_row %}
 
 {# Redefine template for form_widget #}
 {% block _ad_images_entry_widget %}
-     <div class="form-group">
-         <div class="row">
-             <div class="col">{{form_widget(form.url)}}</div>
-             <div class="col">{{form_widget(form.caption)}}</div>
-         </div>
-     </div>
+<div class="form-group" id="block_{{id}}">
+    <div class="row">
+        <div class="col-10">
+            <div class="row">
+                <div class="col">{{form_widget(form.url)}}</div>
+                <div class="col">{{form_widget(form.caption)}}</div>
+            </div>
+        </div>
+        <div class="col-2">
+            <button type="button" class="btn btn-danger" data-action="delete" data-target="#block_{{id}}">X</button>
+        </div>
+    </div>
+</div>
 {% endblock _ad_images_entry_widget %}
 
 {% block javascripts %}
-     <script>
-         $('#add-image').click(function(){
-             
-             //Je récupère le nombre de champ deja existant
-             const index = $('#ad_images div.form-group').length; 
-             
-             //recuperer le prototype des entrées
-             const tmpl = $('#ad_images').data('prototype').replace(/__name__/g, index);
+<script>
+    $('#add-image').click(function () {
 
-            //Injecter le code dans la div
-            $('#ad_images').append(tmpl);
+        //Je récupère le nombre de champ deja existant
+        const index = $('#ad_images div.form-group').length;
 
-         })
-     </script>
+        //recuperer le prototype des entrées
+        const tmpl = $('#ad_images').data('prototype').replace(/__name__/g, index);
+
+        //Injecter le code dans la div
+        $('#ad_images').append(tmpl);
+
+    })
+</script>
 {% endblock javascripts %}
