Fix the index bug in Add image

--- a/templates/ad/new.html.twig
+++ b/templates/ad/new.html.twig
@@ -27,6 +27,7 @@
 
 <p> Ajoutez vos images : </p>
 {{ form_widget(form) }}
+<input type="hidden" id="widgets-counter" value="0">
 
 <div class="form-group">
     <button type="button" id="add-image" class="btn btn-primary">Ajoutez une image</button>
@@ -60,13 +61,16 @@
     $('#add-image').click(function () {
 
         //Je récupère le nombre de champ deja existant
-        const index = $('#ad_images div.form-group').length;
+        const index = $('#widgets-counter').val();
 
         //recuperer le prototype des entrées
         const tmpl = $('#ad_images').data('prototype').replace(/__name__/g, index);
 
         //Injecter le code dans la div
         $('#ad_images').append(tmpl);
+
+        //Increment Value of widget-counter
+        $('#widgets-counter').val(Number(index)+1);
 
         //call the function delete
         deleteInputImage();
