--- a/templates/ad/edit.html.twig
+++ b/templates/ad/edit.html.twig
@@ -45,8 +45,14 @@
     <div class="row">
         <div class="col-10">
             <div class="row">
-                <div class="col">{{form_widget(form.url)}}</div>
-                <div class="col">{{form_widget(form.caption)}}</div>
+                <div class="col">
+                    {{form_widget(form.url)}}
+                    {{form_errors(form.url)}}
+                </div>
+                <div class="col">
+                    {{form_widget(form.caption)}}
+                    {{form_errors(form.caption)}}
+                </div>
             </div>
         </div>
         <div class="col-2">
