--- a/templates/ad/edit.html.twig
+++ b/templates/ad/edit.html.twig
@@ -5,7 +5,9 @@
 
 {% block body %}
 
-{% form_theme form _self %}
+{# Call the theme #}
+{% form_theme form 'ad/_collection.html.twig' %}
+
 <div class="container">
     <h1> Modifiez l'annonce "<strong>{{ ad.title }}</strong>" </h1>
 
@@ -21,82 +23,6 @@
 
 {% endblock %}
 
-
-{# Redefine template for imageType #}
-{% block _ad_images_widget  %}
-
-<p> Ajoutez vos images : </p>
-{{ form_widget(form) }}
-<input type="hidden" id="widgets-counter" value="0">
-
-<div class="form-group">
-    <button type="button" id="add-image" class="btn btn-primary">Ajoutez une image</button>
-</div>
-{% endblock _ad_images_widget %}
-
-{# Redefine template for form_row #}
-{% block _ad_images_entry_row %}
-{{form_widget(form)}}
-{% endblock _ad_images_entry_row %}
-
-{# Redefine template for form_widget #}
-{% block _ad_images_entry_widget %}
-<div class="form-group" id="block_{{id}}">
-    <div class="row">
-        <div class="col-10">
-            <div class="row">
-                <div class="col">
-                    {{form_widget(form.url)}}
-                    {{form_errors(form.url)}}
-                </div>
-                <div class="col">
-                    {{form_widget(form.caption)}}
-                    {{form_errors(form.caption)}}
-                </div>
-            </div>
-        </div>
-        <div class="col-2">
-            <button type="button" class="btn btn-danger" data-action="delete" data-target="#block_{{id}}">X</button>
-        </div>
-    </div>
-</div>
-{% endblock _ad_images_entry_widget %}
-
 {% block javascripts %}
-
-<script>
-    $('#add-image').click(function () {
-
-        //Je récupère le nombre de champ deja existant
-        const index = $('#widgets-counter').val();
-
-        //recuperer le prototype des entrées
-        const tmpl = $('#ad_images').data('prototype').replace(/__name__/g, index);
-
-        //Injecter le code dans la div
-        $('#ad_images').append(tmpl);
-
-        //Increment Value of widget-counter
-        $('#widgets-counter').val(Number(index) + 1);
-
-        //call the function delete
-        deleteInputImage();
-    })
-
-    function deleteInputImage() {
-        $('button[data-action="delete"]').click(function () {
-            const target = this.dataset.target;
-            $(target).remove();
-        })
-    }
-
-    function updateCounter() {
-        const count = +$('#ad_images div.form-group').length;
-        $('#widgets-counter').val(Number(count));
-    }
-
-    updateCounter();
-    deleteInputImage();
-
-</script>
+<script src="/js/ad.js"></script>
 {% endblock javascripts %}
