--- a/templates/account/login.html.twig
+++ b/templates/account/login.html.twig
@@ -4,4 +4,34 @@
 
 {% block body %}
 
+<div class="container">
+
+    <div class="row">
+        <div class="col-md-3">&nbsp;</div>
+        <div class="col-md-6">
+            <div class="bg-primary p-3">
+                <h1>Connectez-vous !</h1>
+                <form action="{{ path('account_login') }}" method="POST">
+
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="text" name="_username" id="email" class="form-control" placeholder="Votre email" required>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label for="password">Mot de passe</label>
+                        <input type="password" name="_password" id="password" class="form-control"
+                            placeholder="votre mot de passe" required>
+                    </div>
+
+                    <div class="form-group text-center">
+                        <button type="submit" class="btn btn-lg btn-success">Je me connecte !</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+    </div>
+</div>
 {% endblock %}
