--- a/templates/account/login.html.twig
+++ b/templates/account/login.html.twig
@@ -11,20 +11,17 @@
         <div class="col-md-6">
             <div class="bg-primary p-3">
                 <h1>Connectez-vous !</h1>
-                <form action="{{ path('account_login') }}" method="POST">
-
+                <form action="{{ path('account_login') }}" method="post">
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="text" name="_username" id="email" class="form-control" placeholder="Votre email" required>
+                        <input type="text" name="_username" id="email" class="form-control"
+                            placeholder="Adresse email ..." required>
                     </div>
-
-
                     <div class="form-group">
                         <label for="password">Mot de passe</label>
-                        <input type="password" name="_password" id="password" class="form-control"
-                            placeholder="votre mot de passe" required>
+                        <input type="password" name="_password" id="password" placeholder="Mot de passe ..."
+                            class="form-control" required>
                     </div>
-
                     <div class="form-group text-center">
                         <button type="submit" class="btn btn-lg btn-success">Je me connecte !</button>
                     </div>
