--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 	<a class="navbar-brand" href="{{path('homePage')}}">SymfoBNB !</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
+		aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 
@@ -13,10 +14,19 @@
 				<a class="nav-link" href="{{path('ads_index')}}">Annonces</a>
 			</li>
 		</ul>
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Mon compte</a>
-            </li>
-        </ul>
+		<ul class="navbar-nav ml-auto">
+			{% if not app.user %}
+			<li class="nav-item">
+				<a class="nav-link" href="{{ path('account_register') }}">Inscription</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="{{ path('account_login') }}">Connexion</a>
+			</li>
+			{% elseif app.user %}
+			<li class="nav-item">
+				<a class="nav-link" href="{{ path('account_logout') }}">Déconnexion</a>
+			</li>
+			{% endif %}
+		</ul>
 	</div>
 </nav>
