--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -10,10 +10,13 @@
         <div class="col-md-3">&nbsp;</div>
         <div class="col-md-6">
             <div class="bg-primary p-3">
-                <h1>Modification du profil!</h1>
+                <h1>Changement du Mot de passe!</h1>
+                    {{ form_start(form) }}
+                    {{ form_widget(form) }}
                     <p class="text-center">
-                        {# <button type="submit" class="btn btn-lg btn-primary">Modifier le mot de passe</button> #}
+                        <button type="submit" class="btn btn-lg btn-primary">Modifier le mot de passe</button>
                     </p>
+                    {{ form_end(form) }}
             </div>
         </div>
 
