--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,3 +17,14 @@ div.ad-titre p {
 div.carousel-caption {
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
 }
+
+.avatar {
+    max-width: 128px;
+    max-height: 128px;
+    border-radius: 50%;
+}
+
+.avatar-medium {
+    max-height: 64px;
+    max-width: 64px;
+}
