--- a/templates/ad/index.html.twig
+++ b/templates/ad/index.html.twig
@@ -8,39 +8,7 @@
 	<h1 class="my-3">Voici les annonces de nos hôtes</h1>
 	<div class="row">
 		{% for ad in ads %}
-		{# Variable for path Slug  #}
-		{% set pathSlug = path('ads_show', { 'slug': ad.slug }) %}
-
-		<div class="col-md-4">
-			<div class="card bg-light mb-3">
-
-				<div class="card-header text-center">
-					{{ad.rooms}}
-					Chambres,
-					<strong>{{ad.price}}€/nuit</strong>
-					<br>
-					<small>Pas encore noté</small>
-				</div>
-
-				<a href="{{ pathSlug }}">
-					<img src="{{ ad.coverImage }}" alt="PhotoDuLogement"
-						style="height: 200px; width: 100%; display: block">
-				</a>
-
-				<div class="card-body">
-					<h4 class="card-title">
-						<a href="{{ pathSlug }}" class="text-dark text-decoration-none">
-							{{ad.title}}
-						</a>
-					</h4>
-					<p>{{ad.introduction}}</p>
-					<a href="{{ pathSlug }}" class="btn btn-secondary">
-						en savoir plus !</a>
-				</div>
-
-			</div>
-		</div>
-
+			{% include "ad/_ad.html.twig" %}
 		{% endfor %}
 	</div>
 </div>
