--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,3 +28,8 @@ div.carousel-caption {
     max-height: 64px;
     max-width: 64px;
 }
+
+.avatar-mini {
+    max-height: 24px;
+    max-width: 24px;
+}
