--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -23,8 +23,18 @@
 				<a class="nav-link" href="{{ path('account_login') }}">Connexion</a>
 			</li>
 			{% elseif app.user %}
-			<li class="nav-item">
-				<a class="nav-link" href="{{ path('account_logout') }}">Déconnexion</a>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="accountDropdownLink">
+					<img src="{{app.user.picture}}" class="avatar avatar-mini mr-2" alt="avatar de {{app.user.fullName}}"> {{app.user.fullName}}
+				</a>
+				<div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
+
+					<a href="{{ path('account_index') }}" class="dropdown-item">Mon compte</a>
+					<a href="{{ path('account_profil') }}" class="dropdown-item">Modifier mon profil</a>
+					<div class="dropdown-divider"></div>
+					<a href="{{ path('account_logout') }}" class="dropdown-item">Déconnexion</a>
+					
+				</div>
 			</li>
 			{% endif %}
 		</ul>
