--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -30,9 +30,14 @@
 				<div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
 
 					<a href="{{ path('ads_new') }}" class="dropdown-item">créé une annonce</a>
+
+					<div class="dropdown-divider"></div>
+
 					<a href="{{ path('account_index') }}" class="dropdown-item">Mon compte</a>
 					<a href="{{ path('account_profil') }}" class="dropdown-item">Modifier mon profil</a>
+
 					<div class="dropdown-divider"></div>
+
 					<a href="{{ path('account_logout') }}" class="dropdown-item">Déconnexion</a>
 					
 				</div>
