--- a/templates/ad/_ad.html.twig
+++ b/templates/ad/_ad.html.twig
@@ -21,10 +21,14 @@
                 <a href="{{ pathSlug }}" class="text-dark text-decoration-none">
                     {{ad.title}}
                 </a>
-            </h4> 
+            </h4>
             <p>{{ad.introduction}}</p>
             <a href="{{ pathSlug }}" class="btn btn-secondary">
                 en savoir plus !</a>
+            {% if app.user and app.user == ad.author %}
+            <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-warning">Modifier l'annonce</a>
+            {% endif %}
+
         </div>
 
     </div>
