--- a/templates/ad/_ad.html.twig
+++ b/templates/ad/_ad.html.twig
@@ -27,6 +27,7 @@
                 en savoir plus !</a>
             {% if app.user and app.user == ad.author %}
             <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-warning">Modifier l'annonce</a>
+            <a href="{{ path('ads_delete', {'slug': ad.slug}) }}" class="btn btn-danger">supprimer l'annonce</a>
             {% endif %}
 
         </div>
