--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -14,6 +14,7 @@
 
         {% if app.user and app.user == ad.author %}
             <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-warning">Modifier l'annonce</a>
+            <a href="{{ path('ads_delete', {'slug': ad.slug}) }}" class="btn btn-danger">supprimer l'annonce</a>
         {% endif %}
 
 
