--- a/templates/booking/book.html.twig
+++ b/templates/booking/book.html.twig
@@ -1,20 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BookingController!{% endblock %}
+{% block title %}reserver {{ad.title}}{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<div class="container">
+    <H1>Reserver le logement {{ad.title}}</H1>
+    <p>Vous etes sur le point de reserver le logement de {{ad.author.fullName}}</p>
+    <strong>On s'occupe de tout.</strong>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Applications/MAMP/htdocs/symfony/airbnb_symfony/src/Controller/BookingController.php'|file_link(0) }}">src/Controller/BookingController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Applications/MAMP/htdocs/symfony/airbnb_symfony/templates/booking/index.html.twig'|file_link(0) }}">templates/booking/index.html.twig</a></code></li>
-    </ul>
+    {{ form_start(form) }}
+    <div class="alert alert-light">
+        <H2>A quelles dates souhaitez vous prendre votre reservation ?</H2>
+        <div class="row">
+            <div class="col">{{ form_row(form.startDate) }}</div>
+            <div class="col">{{ form_row(form.endDate) }}</div>
+        </div>
+    </div>
+    <H4>Montant du séjour : <span id="amount">...</span>€</H4>
+    <span id="days">?</span> nuit(s) à {{ad.price}}€/nuit.
+    {{form_end(form)}}
 </div>
 {% endblock %}
