--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -10,7 +10,7 @@
             </strong> pour
             <strong>{{ ad.price }}€</strong> par nuit
         </p>
-        <a href="#" class="btn btn-primary">Reservez !</a>
+        <a href="{{ path('booking_create', {'slug': ad.slug }) }}" class="btn btn-primary">Reservez !</a>
 
         {% if app.user and app.user == ad.author %}
             <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-warning">Modifier l'annonce</a>
