--- a/templates/booking/book.html.twig
+++ b/templates/booking/book.html.twig
@@ -2,6 +2,13 @@
 
 {% block title %}reserver {{ad.title}}{% endblock %}
 
+{% block stylesheets %}
+<link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
+    integrity="sha512-mSYUmp1HYZDFaVKK//63EcZq4iFWFjxSL+Z3T/aCt4IO9Cejm03q3NKKYN6pFQzY0SBOr8h+eCIAZHPXcpZaNw=="
+    crossorigin="anonymous" />
+{% endblock stylesheets %}
+
 {% block body %}
 <div class="container">
     <H1>Reserver le logement {{ad.title}}</H1>
@@ -30,3 +37,9 @@
     {{form_end(form)}}
 </div>
 {% endblock %}
+
+{% block javascripts %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"
+    integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ=="
+    crossorigin="anonymous"></script>
+{% endblock javascripts %}
