--- a/templates/booking/book.html.twig
+++ b/templates/booking/book.html.twig
@@ -10,6 +10,7 @@
 {% endblock stylesheets %}
 
 {% block body %}
+
 <div class="container">
     <H1>Reserver le logement {{ad.title}}</H1>
     <p>Vous etes sur le point de reserver le logement de {{ad.author.fullName}}</p>
@@ -42,4 +43,19 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"
     integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ=="
     crossorigin="anonymous"></script>
+
+    <script>
+
+        $(document).ready(function(){
+            $("#booking_startDate, #booking_endDate").datepicker({
+                format: 'dd/mm/yyyy', 
+                datesDisabled: [
+                    {% for day in ad.notAvailableDays %}
+                        "{{ day.format('d/m/Y') }}",
+                    {% endfor %}
+                ]
+            });
+        })
+
+    </script>
 {% endblock javascripts %}
