--- a/public/css/app.css
+++ b/public/css/app.css
@@ -33,3 +33,7 @@ div.carousel-caption {
     max-height: 24px;
     max-width: 24px;
 }
+
+.datepicker table tr td.disabled, .datepicker table tr td.disabled:hover {
+    color:firebrick !important ;
+}
