--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -34,6 +34,7 @@
 					<div class="dropdown-divider"></div>
 
 					<a href="{{ path('account_index') }}" class="dropdown-item">Mon compte</a>
+					<a href="{{ path('account_booking') }}" class="dropdown-item">Mes Reservations</a>
 					<a href="{{ path('account_profil') }}" class="dropdown-item">Modifier mon profil</a>
 
 					<div class="dropdown-divider"></div>
