Add script fontawesome

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,7 @@
     <script src="/js/jquery.min.js"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/7c09c4a3ab.js" crossorigin="anonymous"></script>
     {% block javascripts %}{% endblock %}
 
 </body>
