--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -66,7 +66,16 @@
                                 {{comment.content}}
                             </blockquote>
                             <strong>note donnée par {{comment.author.fullName}} :</strong>
-                            {{comment.rating}}
+
+                            <span class="rating">
+                                {% for i in 1..5 %}
+                                    {% if i <= comment.rating %}
+                                        <i class="fas fa-star"></i>
+                                    {% else %}
+                                        <i class="far fa-star"></i>
+                                    {% endif %}
+                                {% endfor %}
+                            </span>
                         </strong>
                     </div>
                 {% endfor %}
