--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -64,12 +64,12 @@
                 <h4 class="alert-heading text-center">
                     <div class="row align-items-center">
                         <div class="col">
-                            Note global donnée par nos voyageurs : <br>
-                            <small>Note moyenne calculé sur {{ ad.comments|length}} avis !</small>
+                            Note global donnée par nos voyageurs : 
                         </div>
 
                         <div class="col">
-                            {% include "includes/rating.html.twig" with {'rating': 4} %}
+                            {% include "includes/rating.html.twig" with {'rating': ad.avgRatings} %}<br>
+                            <small>(calculé sur {{ ad.comments|length}} avis)</small>
                         </div>
                     </div>
                 </h4>
