Add rating in card

--- a/templates/ad/_ad.html.twig
+++ b/templates/ad/_ad.html.twig
@@ -9,7 +9,13 @@
             Chambres,
             <strong>{{ad.price}}€/nuit</strong>
             <br>
-            <small>Pas encore noté</small>
+
+            {% if ad.comments|length > 0 %}
+                {% include "includes/rating.html.twig" with {'rating': ad.avgRatings} %}
+            {% else %}
+                <small>Pas encore noté</small>
+            {% endif %}
+
         </div>
 
         <a href="{{ pathSlug }}">
@@ -27,7 +33,9 @@
                 en savoir plus !</a>
             {% if app.user and app.user == ad.author %}
             <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-warning">Modifier l'annonce</a>
-            <a href="{{ path('ads_delete', {'slug': ad.slug}) }}" class="btn btn-danger" onclick="return confirm('êtes vous sûre de vouloir supprimer l\'annonce : {{ad.title}} ?')">supprimer l'annonce</a>
+            <a href="{{ path('ads_delete', {'slug': ad.slug}) }}" class="btn btn-danger"
+                onclick="return confirm('êtes vous sûre de vouloir supprimer l\'annonce : {{ad.title}} ?')">supprimer
+                l'annonce</a>
             {% endif %}
 
         </div>
