--- a/public/css/app.css
+++ b/public/css/app.css
@@ -37,3 +37,7 @@ div.carousel-caption {
 .datepicker table tr td.disabled, .datepicker table tr td.disabled:hover {
     color:firebrick !important ;
 }
+
+span.rating i.fas, span.rating i.far{
+    color: goldenrod !important;
+}
