--- a/templates/booking/show.html.twig
+++ b/templates/booking/show.html.twig
@@ -40,8 +40,12 @@
                     <dd class="col-md-8">{{ booking.duration }}</dd>
                     <dt class="col-md-4">Montant total</dt>
                     <dd class="col-md-8">{{ booking.amount }}€ (soit {{ ad.price }}€/nuit)</dd>
-                    <dt class="col-md-4">Commentaire : </dt>
-                    <dd class="col-md-8">{{ booking.comment }}</dd>
+
+                    {% if booking.comment != NULL %}
+                        <dt class="col-md-4">Commentaire : </dt>
+                        <dd class="col-md-8">{{ booking.comment }}</dd>             
+                    {% endif %}
+
                 </dl>
 
                 <hr>
@@ -80,6 +84,14 @@
                 <a href="{{pathAd}}" class="btn btn-primary">Plus d'informations</a>
             </div>
         </div>
+    </div>
+    <div class="alert alert-light">
+        <h2 class="alert-heading text-center">Votre avis compte !</h2>
+        {% if date() > date(booking.endDate) %}
+            {# waiting the form ....  #}
+        {% else %}
+            <p>Vous pourrez donner votre avis lorsque vous aurez terminé votre séjour.</p>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
