--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,6 +14,12 @@ div.ad-titre p {
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
 }
 
+div.ad-titre .btn{ 
+    margin-top: 2em;
+    font-size: 1.5em;
+    line-height: 1.5em;
+}
+
 div.carousel-caption {
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
 }
@@ -40,4 +46,8 @@ div.carousel-caption {
 
 span.rating i.fas, span.rating i.far{
     color: goldenrod !important;
+}
+
+.alert a{
+    text-decoration: none;
 }
